# langgraph-study

./: .gitignore  main.py  pyproject.toml
agents/retrieval/: income_retriever.py
agents/test_agent/: llm.py  test_graph_builder.py  test_state.py
agents/test_agent/nodes/: check_doc_relevance.py  generate_node.py  retrieval_node.py  rewrite.py
output_test/: income_tax.md  income_tax.txt
utils/: py-zerox.py  to-tesxt.py
